Fix behavior of back button and fix navbar spacing

--- a/src/styles/leo-provider-app.styl
+++ b/src/styles/leo-provider-app.styl
@@ -650,7 +650,7 @@
     .footer-row { margin-top: -30px; }
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 767px) {
     .message-back {
         position: fixed;
         margin-top: 20px;
@@ -660,7 +660,7 @@
 
     .navbar-nav.collapsed {
       position: absolute;
-      left: 25%;
+      left: 35%;
     }
 
     .list-group-item { height: 140px; }
@@ -677,7 +677,7 @@
 
   /* Mobile styling: small */
   @media (max-width: 440px) {
-    .navbar-nav.collapsed { left: 35s%; }
+    .navbar-nav.collapsed { left: 25%; }
 
     .main-container { padding: 0px; }
   }
